# compat_layer

./: .clangd  .gitignore  CMakeLists.txt  README.md  VP_D3D12_VKD3D_PROTON_profile.json  VP_D3D12_VKD3D_PROTON_profile_2.14.1.json  VP_DXVK_requirements_2.7.1.json  VP_DXVK_requirements_3.0.1.json  amd.json  build_linux_x86_64.sh  compile.sh  compile_android.sh  generate_spoofed_profile.py  libdxvk_mali_compat_layer.json  libdxvk_mali_compat_layer.json.in  libdxvk_mali_compat_layer32.json.in  log.sh  mali.json  push.sh  summarize.py  vkd3d_check.py  vp_gpuinfo_google_pixel_8_pro_54_3_0_android_17_0.json  vp_gpuinfo_motorola_moto_g86_5g_44_1_0_android_16_0.json
.github/workflows/: android.yml  check_profiles.yml
Mali-G1-Ultra_MC11/54.1.0/: 49782.txt
Mali-G1-Ultra_MC12/54.1.0/: 48112.txt  49576.txt  49591.txt  50059.txt
Mali-G31/21.0.0/: 48548.txt
Mali-G310/44.0.0/: 43171.txt
Mali-G310/44.1.0/: 42905.txt
Mali-G51/18.0.0/: 47772.txt  47773.txt  47850.txt  47985.txt  49903.txt
Mali-G52/18.0.0/: 15378.txt  47701.txt  9942.txt
Mali-G52/19.0.0/: 10194.txt  11056.txt
Mali-G52/21.0.0/: 17292.txt  22339.txt  38103.txt  48083.txt
Mali-G52/26.0.0/: 47809.txt  50035.txt
Mali-G52/27.0.0/: 36222.txt  45972.txt  46669.txt  47749.txt
Mali-G52/34.0.0/: 36028.txt  37536.txt  40030.txt  49767.txt
Mali-G52/38.1.0/: 35714.txt  37905.txt  40272.txt  40444.txt  46160.txt
Mali-G52/40.0.0/: 18582.txt
Mali-G52/44.0.0/: 23450.txt
Mali-G52/49.1.0/: 49501.txt
Mali-G52/51.0.0/: 47323.txt
Mali-G52_MC2/20.0.0/: 13669.txt  15256.txt  19429.txt  47865.txt  48724.txt
Mali-G52_MC2/26.0.0/: 48229.txt  49873.txt  49905.txt
Mali-G52_MC2/32.1.0/: 42968.txt  44487.txt  44615.txt  49337.txt
Mali-G52_MC2/49.1.0/: 49541.txt  49833.txt  50046.txt  50171.txt
Mali-G57/21.0.0/: 49393.txt
Mali-G57/28.0.0/: 15036.txt  15610.txt
Mali-G57/34.0.0/: 36844.txt  40682.txt  42094.txt  45595.txt
Mali-G57/40.0.0/: 45039.txt  45408.txt  46541.txt  47989.txt
Mali-G57/41.0.0/: 42533.txt  44104.txt  44133.txt  44654.txt  49507.txt
Mali-G57/44.0.0/: 35431.txt
Mali-G57/44.1.0/: 43400.txt
Mali-G57/49.1.0/: 49096.txt  49477.txt  49660.txt  49912.txt  50036.txt
Mali-G57/51.0.0/: 45723.txt
Mali-G57_MC2/26.0.0/: 47879.txt  48774.txt  49736.txt  49787.txt  49980.txt
Mali-G57_MC2/32.1.0/: 49597.txt  49784.txt  49788.txt  49868.txt  49972.txt
Mali-G57_MC2/38.1.0/: 49158.txt  49379.txt  49689.txt  49703.txt  49962.txt
Mali-G57_MC2/48.0.0/: 34628.txt
Mali-G57_MC2/54.1.0/: 48555.txt  49536.txt  50114.txt  50129.txt
Mali-G57_MC3/21.0.0/: 47726.txt  47872.txt  49663.txt
Mali-G57_MC4/21.0.0/: 42638.txt
Mali-G610/18.0.0/: 33059.txt  34358.txt  39105.txt  45754.txt  46182.txt
Mali-G610/26.0.0/: 43697.txt
Mali-G610/54.2.0/: 47797.txt
Mali-G610_MC2/54.1.0/: 49862.txt
Mali-G610_MC4/38.1.0/: 46080.txt  46501.txt  48493.txt  49100.txt
Mali-G610_MC6/32.1.0/: 47691.txt  47708.txt  48075.txt  48377.txt  49518.txt
Mali-G610_MC6/38.1.0/: 47733.txt
Mali-G610_MC6/54.1.0/: 49858.txt
Mali-G615_MC2/44.1.0/: 49946.txt  50133.txt
Mali-G615_MC6/44.1.0/: 49402.txt  49804.txt
Mali-G68/32.1.0/: 50126.txt
Mali-G68/38.1.0/: 48129.txt  48561.txt  48721.txt  49254.txt  49716.txt
Mali-G68_MC4/26.0.0/: 15934.txt
Mali-G68_MC4/32.1.0/: 48371.txt  48869.txt  48947.txt  49097.txt
Mali-G68_MC4/49.1.0/: 44569.txt  46797.txt  48052.txt  48234.txt  (+1 more)
src/: buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  descriptors.cpp  descriptors.hpp  generated_spoofed_profile.hpp  image.cpp  image.hpp  layer.cpp  layer.hpp  logger.cpp  null_descriptors.cpp  null_descriptors.hpp  pipeline_state.cpp  pipeline_state.hpp  pipelines.cpp  pipelines.hpp  push_descriptors.cpp  push_descriptors.hpp  queue.cpp  queue.hpp  shader_reflector.cpp  shader_reflector.hpp  sparse_binding.cpp  sparse_binding.hpp  spoof_profile.cpp  spoof_profile.hpp  staging_resources.cpp  staging_resources.hpp  vk_func.cpp  vk_func.hpp
(+258 files in other folders)
